# uxmpp

./: .gitignore  COPYING  Makefile.am  README  README.md  autogen.sh  cleanall.sh  configure.ac
doc/: Makefile.am  doxygen.cfg.in
src/: Makefile.am  uxmpp.hpp  uxmpp.pc.in
src/uxmpp/: IqStanza.cpp  IqStanza.hpp  Jid.cpp  Jid.hpp  Logger.cpp  Logger.hpp  MessageStanza.cpp  MessageStanza.hpp  PresenceStanza.cpp  PresenceStanza.hpp  Semaphore.cpp  Semaphore.hpp  Session.cpp  Session.hpp  SessionConfig.cpp  SessionConfig.hpp  SessionListener.cpp  SessionListener.hpp  SessionState.hpp  Stanza.cpp  Stanza.hpp  StanzaError.cpp  StanzaError.hpp  StreamError.cpp  StreamError.hpp  StreamXmlObj.cpp  StreamXmlObj.hpp  TlsConfig.hpp  UxmppException.cpp  UxmppException.hpp  XmlInputStream.cpp  XmlInputStream.hpp  XmlNames.cpp  XmlNames.hpp  XmlObject.cpp  XmlObject.hpp  XmlStream.cpp  XmlStream.hpp  XmlStreamListener.hpp  XmppModule.cpp  (+9 more)
src/uxmpp/io/: BsdResolver.cpp  BsdResolver.hpp  Connection.cpp  Connection.hpp  ConnectionManager.cpp  ConnectionManager.hpp  FileConnection.cpp  FileConnection.hpp  IOManager.cpp  IOManager.hpp  IoException.hpp  IpHostAddr.cpp  IpHostAddr.hpp  Resolver.hpp  SocketConnection.cpp  SocketConnection.hpp  TcpConnection.cpp  TcpConnection.hpp  Timer.cpp  Timer.hpp  TimerException.hpp  TlsConfig.hpp  android_resolver_glue.h  io_operation.hpp
src/uxmpp/mod/: AuthModule.cpp  AuthModule.hpp  Buddy.hpp  DiscoIdentity.cpp  DiscoIdentity.hpp  DiscoInfo.cpp  DiscoInfo.hpp  DiscoModule.cpp  DiscoModule.hpp  IBBModule.cpp  IBBModule.hpp  KeepAliveModule.cpp  KeepAliveModule.hpp  MessageModule.cpp  MessageModule.hpp  MessageModuleListener.hpp  MultiUserChatModule.hpp  PepModule.cpp  PepModule.hpp  PingModule.cpp  PingModule.hpp  PresenceModule.cpp  PresenceModule.hpp  PresenceModuleListener.hpp  PrivateDataModule.cpp  PrivateDataModule.hpp  PubSubModule.cpp  PubSubModule.hpp  RegisterModule.cpp  RegisterModule.hpp  RegistrationInfo.hpp  Roster.cpp  Roster.hpp  RosterItem.cpp  RosterItem.hpp  RosterModule.cpp  RosterModule.hpp  RosterModuleListener.hpp  SearchModule.cpp  SearchModule.hpp  (+8 more)
src/uxmpp/net/: BsdResolver.cpp  BsdResolver.hpp  IpHostAddr.cpp  IpHostAddr.hpp  Resolver.hpp  android_resolver_glue.h
src/uxmpp/xml/: names.cpp  names.hpp
test/: Makefile.am  test_ConnectionManager.cpp  test_FileConnection.cpp  test_ImpSession.cpp  test_IpHostAddr.cpp  test_Jid.cpp  test_Logger.cpp  test_RegisterModule.cpp  test_Resolver.cpp  test_Semaphore.cpp  test_Session.cpp  test_Timer.cpp  test_XmlObject.cpp  test_XmlStream.cpp  test_cores.cpp  uxmpp.cpp
